# fastforward

./: .coderabbit.yaml  .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DEVELOPING.md  Dockerfile  README.md  TODO.md  _typos.toml  add_io_proofs.sh  agent.html  bench_out.txt  deep_dive.sh  deny.toml  dhat.out.753444  dhat.out.757824  fix.py  fix2.py  fix3.py  fix_1331.patch  fix_1331_all.patch  fix_1335.patch  fix_arrow.patch  fix_compliance.py  fix_do_send.sh  fix_dosend2.sh  fix_dosend3.sh  fix_input.py  fix_otlp.patch  fix_output_tests.py  fix_output_tests_2.py  fix_output_tests_3.py  fix_readme.sh  fix_readme10.sh  fix_readme11.sh  fix_readme12.sh  fix_readme2.sh  fix_readme4.sh  (+38 more)
.cargo/: config.toml
.config/: nextest.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.ona/: automations.yaml
.playwright-cli/: page-2026-04-20T02-22-38-271Z.yml  smoothness-check.js  spawn-color-check.js
_site/: 404.html  index.html  print.html  searcher-c2a407aa.js  searchindex-3f53ebf0.js  toc-9b7bee13.js  toc.html
bench/: explore.sh
benches/: pipeline.rs
book/: astro.config.mjs  package-lock.json  package.json
crates/logfwd-bench/: Cargo.toml  README.md
crates/logfwd-bench/benches/: batch_formation.rs  builder_compare.rs  elasticsearch_arrow.rs  file_io.rs  full_chain.rs  generator_arrow_vs_json.rs  otlp_io.rs  output_encode.rs  pipeline.rs  s3_input.rs  throughput_ceiling.rs
crates/logfwd-bench/src/: cardinality.rs  data_gen.rs  e2e_profile.rs  es_throughput.rs  explore.rs  file_output_profile.rs  generators.rs  lib.rs  library_eval.rs  main.rs  mem_bench.rs  memory_profile.rs  rss.rs  sizes.rs
crates/logfwd-bench/src/generators/: cloudtrail.rs  envoy_access.rs
crates/logfwd-bench/src/generators/cloudtrail/: engine.rs
crates/logfwd-core/fuzz/: Cargo.toml
crates/logfwd-core/fuzz/fuzz_targets/: chunk_index.rs  cri.rs  format_parser.rs  scanner.rs  scanner_consistency.rs  scanner_sink.rs  scanner_transform.rs  streaming_scanner.rs  zero_copy_scanner.rs
crates/logfwd-ebpf-proto/: Cargo.toml  SANDBOX_FINDINGS.md  bpf_helpers.py
crates/logfwd-ebpf-proto/pipe-capture/: Cargo.toml
crates/logfwd-ebpf-proto/pipe-capture/pipe-capture-ebpf/: Cargo.toml
crates/logfwd-ebpf-proto/pipe-capture/src/: main.rs
crates/logfwd-ebpf-proto/sensor-ebpf/: .gitignore  Cargo.toml
crates/logfwd-ebpf-proto/sensor-ebpf/sensor-ebpf-common/src/: dns.rs  lib.rs
crates/logfwd-ebpf-proto/sensor-ebpf/sensor-ebpf-kern/src/: main.rs
crates/logfwd-ebpf-proto/sensor-ebpf/src/: linux.rs  main.rs
crates/logfwd-ebpf-proto/src/: lib.rs
crates/logfwd-ebpf-proto/xdp-syslog/: test_xdp_syslog.py  xdp_syslog.c
crates/logfwd-ebpf-proto/xdp-syslog/udp-bench/src/: main.rs  syslog_parser.rs
crates/logfwd-io/: Cargo.toml
crates/logfwd-io/src/: arrow_ipc_receiver.rs  atomic_write.rs  blocking_stage.rs  checkpoint.rs  compress.rs  dashboard.html  diagnostics.rs  enrichment.rs  filter_hints.rs  format.rs  framed.rs  generator.rs  host_metrics.rs  http_input.rs  input.rs  journald_input.rs  lib.rs  macos_log_input.rs  metric_history.rs  otap_receiver.rs  otlp_receiver.rs  platform_sensor.rs  platform_sensor_beta.rs  platform_sensor_filter.rs  receiver_health.rs  receiver_http.rs  segment.rs  span_exporter.rs  stderr_capture.rs  tail.rs  tcp_input.rs  udp_input.rs
crates/logfwd-io/src/diagnostics/: metrics.rs  models.rs  policy.rs  process.rs  server.rs
crates/logfwd-io/src/framed/: state.rs
crates/logfwd-io/src/generator/: mod.rs  test_support.rs  types.rs
crates/logfwd-io/src/generator/tests/: basic.rs
crates/logfwd-io/src/generator_parts/: part_1.rs  part_2.rs  part_3.rs  tests_2.rs  tests_3.rs
crates/logfwd-io/src/host_metrics/: collection.rs  control.rs  input.rs  types.rs
crates/logfwd-io/src/host_metrics_parts/: tests_1.rs  tests_2.rs
crates/logfwd-io/src/otlp_receiver/: convert.rs  decode.rs  decode_stage.rs  projection.rs  server.rs  tests.rs
crates/logfwd-io/src/otlp_receiver/projection/: generated.rs
crates/logfwd-io/src/otlp_receiver/projection/generated_parts/: part_1.rs  part_5.rs  tests_3.rs
crates/logfwd-io/src/otlp_receiver/tests/: structured.rs
crates/logfwd-io/src/s3_input/: client.rs  decompress.rs  mod.rs  sqs.rs
crates/logfwd-io/src/tail/: discovery.rs  glob.rs  identity.rs  lifecycle.rs  mod.rs  reader.rs  state.rs  tailer.rs  tests.rs  verification.rs
crates/logfwd-io/src/tcp_input/: transport.rs  verification.rs
crates/logfwd-io/src/tcp_input/tests/: basic.rs  bounds.rs  tls.rs
crates/logfwd-io/tests/: allocation_churn.rs  checkpoint_state_machine.rs  source_metadata_bench.rs  transport_e2e.rs
crates/logfwd-io/tests/it/: checkpoint_state_machine.rs  file_boundary_contract.rs  framed_buffered_equivalence.rs  framed_state_machine.rs  journald_e2e.rs  main.rs  otelcol_blackbox_contract.rs  otlp_contract_support.rs  otlp_loopback_contract.rs  otlp_receiver_contract.rs  s3_parallel_fetch.rs  transport_e2e.rs
crates/logfwd-runtime/: Cargo.toml
crates/logfwd-runtime/src/: bootstrap.rs  generated_cli.rs  lib.rs  pipeline.rs  transform.rs  turmoil_barriers.rs
crates/logfwd-runtime/src/pipeline/: buffered_input_policy.rs  build.rs  checkpoint_io.rs  checkpoint_policy.rs  cpu_worker.rs  input_build.rs  input_pipeline.rs  input_pipeline_tests.rs  input_poll.rs  io_worker.rs  mod.rs  run.rs  source_metadata.rs  submit.rs  topology.rs  transition.rs
crates/logfwd-runtime/src/pipeline/pipeline_tests/: config_and_factory.rs  failpoints.rs  machine.rs  processing.rs  shutdown.rs
crates/logfwd-runtime/src/processor/: blocklist.rs  http_enrich.rs
crates/logfwd-runtime/src/worker_pool/: dispatch.rs  mod.rs  pool.rs  types.rs  worker.rs
criterion-runs/: 23808837276.json  23887156407.json  24007015691.json  24021729043.json  24067750740.json  24622898248.json
dashboard/: package-lock.json  package.json
data/: index.json
deploy/: Makefile  configmap.yml  daemonset.yml  rbac.yml
dev-docs/: ADAPTER_CONTRACT.md  ARCHITECTURE.md  CHANGE_MAP.md  CODE_STYLE.md  CRATE_RULES.md  DECISIONS.md  DESIGN.md  (+12 more)
(+815 files in other folders)
