[workspace]
resolver = "3"
members = [
    "crates/logfwd-config",
    "crates/logfwd-types",
    "crates/logfwd-core",
    "crates/logfwd-arrow",
    "crates/logfwd-transform",
    "crates/logfwd-io",
    "crates/logfwd-output",
    "crates/logfwd",
    "crates/logfwd-bench",
    "crates/logfwd-competitive-bench",
    "crates/logfwd-test-utils",
]
# default-members: all non-bench crates — keep in sync with members
default-members = [
    "crates/logfwd-config",
    "crates/logfwd-types",
    "crates/logfwd-core",
    "crates/logfwd-arrow",
    "crates/logfwd-transform",
    "crates/logfwd-io",
    "crates/logfwd-output",
    "crates/logfwd",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
arrow = { version = "55", default-features = false, features = ["ipc_compression"] }
bytes = "1"
arrow-json = "55"
datafusion = { version = "48", default-features = false, features = [
    "string_expressions",
    "unicode_expressions",
    "regex_expressions",
    "recursive_protection",
] }
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["http-proto", "reqwest-client", "trace", "metrics"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.32"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
items_after_statements = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
inline_always = "allow"
needless_pass_by_value = "allow"
return_self_not_must_use = "allow"
struct_excessive_bools = "allow"
wildcard_imports = "allow"
unnested_or_patterns = "allow"
unreadable_literal = "allow"
single_match_else = "allow"
manual_let_else = "allow"
uninlined_format_args = "allow"
too_many_lines = "allow"
match_same_arms = "allow"
similar_names = "allow"
trivially_copy_pass_by_ref = "allow"
many_single_char_names = "allow"
large_stack_arrays = "allow"
cast_possible_wrap = "allow"
assigning_clones = "allow"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
unused_qualifications = "warn"

[profile.dev]
# line-tables-only keeps backtraces readable while shrinking debug binaries
# significantly (DataFusion debug info is enormous). (#812)
debug = "line-tables-only"

# Compile all dependencies at opt-level 1 in dev (and, via inheritance, test)
# builds.  DataFusion, Arrow, and their transitive dependency trees produce
# enormous amounts of LLVM IR at the default opt-level 0, which makes cold
# builds slow and produces large object files that increase link time.
# opt-level 1 applies a single cheap optimisation pass that dramatically
# shrinks the IR and the resulting object files without requiring the expensive
# inter-procedural analysis used by levels 2 and 3.  This is a write-once
# setting: sccache ensures already-compiled artefacts are never re-compiled
# on incremental rebuilds, so the only per-change cost is recompiling the
# workspace crate(s) you actually edited.
# See DEVELOPING.md — "Build performance" for full rationale.
[profile.dev.package."*"]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
overflow-checks = true
debug = true  # needed for flamegraphs and dhat to show source locations

[profile.test]
# line-tables-only keeps backtraces readable while shrinking test binaries
# from ~180 MB to ~60 MB each (DataFusion debug info is enormous). (#812)
debug = "line-tables-only"

[profile.bench]
inherits = "release"
