[package]
name = "logfwd-bench"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
arrow = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }
logfwd-core = { path = "../logfwd-core" }
logfwd-output = { path = "../logfwd-output" }
logfwd-transform = { path = "../logfwd-transform" }
memchr = "2"
serde = { workspace = true }
serde_json = "1"

[[bench]]
name = "pipeline"
harness = false

[[bin]]
name = "mem-bench"
path = "src/mem_bench.rs"
