[package]
name = "logfwd-io"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
logfwd-core = { path = "../logfwd-core" }
arrow = { workspace = true }
crossbeam-channel = "0.5"
csv = "1"
gethostname = "1"
glob = "0.3"
memchr = "2"
notify = "7"
opentelemetry = { workspace = true }
serde = { workspace = true }
serde_json = "1"
sysinfo = { version = "0.35", default-features = false, features = ["system"] }
tiny_http = "0.12"
zstd = "0.13"
xxhash-rust = { version = "0.8.15", features = ["xxh32", "xxh64"] }

[dev-dependencies]
tempfile = "3.27.0"
