[package]
name = "logfwd-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
doctest = false

[features]
default = ["datafusion"]
turmoil = ["dep:turmoil"]
datafusion = ["dep:logfwd-transform"]

[dependencies]
arrow = { workspace = true }
backon = { workspace = true }
bytes = { workspace = true }
logfwd-config = { version = "0.1.0", path = "../logfwd-config" }
logfwd-core = { version = "0.1.0", path = "../logfwd-core" }
logfwd-types = { version = "0.1.0", path = "../logfwd-types" }
logfwd-arrow = { version = "0.1.0", path = "../logfwd-arrow" }
logfwd-transform = { version = "0.1.0", path = "../logfwd-transform", optional = true }
logfwd-output = { version = "0.1.0", path = "../logfwd-output" }
logfwd-io = { version = "0.1.0", path = "../logfwd-io" }
memchr = "2"
opentelemetry = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }
tokio-util = { version = "0.7" }
tracing = { workspace = true }
turmoil = { workspace = true, optional = true }

[dev-dependencies]
arrow = { workspace = true }
bytes = { workspace = true }
logfwd-test-utils = { version = "0.1.0", path = "../logfwd-test-utils" }
proptest = "1.11.0"
serial_test = "3.4.0"
stats_alloc = "0.1"
tempfile = "3"
tiny_http = "0.12"
turmoil = { workspace = true }

[lints]
workspace = true
